Fix: Fix blur on safari

--- a/src/components/_modal.scss
+++ b/src/components/_modal.scss
@@ -37,6 +37,7 @@
   width: 100%;
   height: 100%;
   backdrop-filter: blur(2px);
+  transform: translate3d(0, 0, 0);
 }
 
 .modal {
